[WAL-7293] Fix dropdown action list in Dark mode

--- a/src/metronic/sass/custom/_button-group.scss
+++ b/src/metronic/sass/custom/_button-group.scss
@@ -2,6 +2,11 @@
   color: $gray-700;
   font-size: 14px;
 
+  &:hover,
+  &:focus {
+    color: $gray-800;
+  }
+
   .svg-icon {
     margin-right: 0.75rem;
     svg {
